cargo-features = ["edition2024"]
[package]
name = "soffer"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
solana-program = "2.3.0"
solana-program-test = "2.3.3"
solana-sdk = "2.3.1"
spl-token = {version = "8.0.0",features = ["no-entrypoint"]}
tokio = "1.46.1"

[lib]
crate-type = ["cdylib","lib"]
